--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>你这是在自寻死路！</h1>
-<h2>死猪头，受死吧！</h2>
+<h1>博客，不仅仅是分享，也是自我学习的过程——Alfred. 2014/05/07</h1>
+<h2>CSDN博客地址：<a>http://blog.csdn.net/gao715108023/article/details/24697333</a></h2>
+<h2>github地址：<a>https://github.com/gao715108023/</a></h2>
+</body>
 </html>
